#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-08
2015-09-30 David Schneider
- change an abort() call to throw exception to keep user ipython session running

Tag: V00-01-07
2015-09-25 TJ Lane
- Changed import psana to import _psana to break circular dependency in psana
- Tested change in ex_all_dets.py

Tag: V00-01-06
2015-09-23 Mikhail S. Dubrovin
- in PyDetector.py (python interface only) and PyDetectorAccess.py (PSAS-139) 
  - add move_geo, tilt_geo, indexes_xy
  - indexes_x, indexes_y, indexes_xy, and image add parameters pix_scale_size_um=None, xy0_off_pix=None

Tag: V00-01-05
2015-09-18 Mikhail S. Dubrovin
- in PyDetector.py - accept source as a string (PSAS-139) 
	
Tag: V00-01-04
2015-09-18 Mikhail S. Dubrovin
- Add support for Imp (PSAS-139)
- in PyDetector.py add set_correct_acqiris_time(...), set_calib_imp(...), __call__(...), update doc
- in PyDetectorAccess.py add raw_data_imp(...), set_calib_imp(...)
- in PyDataAccess.py add get_imp_data_object(...) and get_imp_config_object(...)
- examples/ex_imp.py

Tag: V00-01-03
2015-09-15 Mikhail S. Dubrovin
- PyDetector.set_source fix type to psana.Source, add ex_cspad_alias.py, ex_pnccd_ts.py (PSAS-139)

Tag: V00-01-02
2015-09-11 Mikhail S. Dubrovin
- multiple changes (PSAS-139)
- DetectorAccess - add setCModPars
- PyDetector.py - set custom common mode parameters, return cspad2x2 arrays with shape=(2,185,388) (PSAS-139)
- pyext/pyDetector.cpp - add set_cmod_pars
- examples/ex_all_dets.py
- examples/ex_acqiris.py
- update examples
	
Tag: V00-01-01
2015-09-09 Mikhail S. Dubrovin
- multiple changes (PSAS-139)
	- add methods (runnum) in addition to (evt,env)