@@ -11,6 +11,11 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-09
+2015-10-01 Christopher O'Grady
+- Fix error in autogenerated documentation introduced in V00-01-07:
+  change "import _psana" back to "import psana".
+
 Tag: V00-01-08
 2015-09-30 David Schneider
 - change an abort() call to throw exception to keep user ipython session running
